Switch to alpine linux