@@ -1,4 +1,4 @@
-FROM adoptopenjdk:11-jre-openj9
+FROM openjdk:14-alpine
 COPY build/libs/github-team-dashboard-all.jar github-team-dashboard.jar
 EXPOSE 8080
-CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar github-team-dashboard.jar
+CMD ["java", "-Dcom.sun.management.jmxremote", "-Xmx128m", "-jar", "github-team-dashboard.jar"]
